--- a/css/auth.css
+++ b/css/auth.css
@@ -1,15 +1,18 @@
-body{
+body
+{
     background: rgb(199, 178, 153);
 }
 
-#login_container{
+#auth_main_div
+{
     display: flex;
     flex-direction: column;
     margin: auto;
     height: 700px;
 }
 
-#login_form{
+#auth_form
+{
     display: flex;
     flex-direction: column;
     align-items: center ;
@@ -19,7 +22,7 @@ body{
     border: 2px solid black;
 }
 
-#login_container2
+#auth_button_div
 {
     display: flex;
     flex-direction: column;
@@ -27,9 +30,10 @@ body{
     margin-top: 50px;
 }
 
-.auth_buttom{
+#auth_buttom
+{
     background-color: rgb(199, 178, 153);
     outline:none;
     height: 30px;
-    width: 300px;
+    width: 250px;
 }
