--- a/css/auth.css
+++ b/css/auth.css
@@ -35,7 +35,15 @@ body
     background-color: rgb(199, 178, 153);
     outline:none;
     height: 30px;
-    width: 260px;
+    width: 250px;
+}
+
+#auth_main_div h1
+{
+/*    border: 2px solid black;
+    padding: 3px 15px 3px 15px;
+    box-shadow: 1px 1px 5px rgb(14, 13, 13);*/
+    text-shadow: 1px 1px 1px black;
 }
 
 #auth_main_div label
