--- a/css/accueil.css
+++ b/css/accueil.css
@@ -1,3 +1,10 @@
+/* Pour la couleur de fond */
+
+.main_div
+{
+    background:rgb(207, 207, 205);
+}
+
 /* Banniere */
 
 #accueil_banniere
@@ -13,12 +20,133 @@
     margin:auto;
 }
 
-/* #accueil_actualites
+
+/* La partie de l'actualité */
+
+#accueil_actualites
 {
+    background-color: white;
+    margin: 20px 150px 50px 150px;
+    padding: 30px 50px 30px 50px;
+    /*border: 3px solid black;*/
+}
+
+#accueil_actualites h1 
+{
+    text-align: center;
+}
+
+#accueil_actualites h2 
+{
+    text-indent: 30px;
+    margin-top: 30px;
+}
+
+#accueil_actualites p
+{
+    text-align: justify;
+    text-indent: 15px;
+}
+
+#accueil_actu_img
+{
+    margin: 40px 0 50px 0;
+    display: flex;
 
 }
 
+#accueil_actualites img
+{
+    margin:auto;
+    height: 50%;
+    width: 50%;
+}
+
+
+/*La partie des top recettes 
+En responsive format petit/mobile ou alors utiliser wrap il faudra mettre les recettes en colonnes */
+
 #accueil_top_recettes
 {
+    /*border: 3px solid red;*/
+}
 
-} */
+#top_recettes_title
+{
+    text-align: center;
+}
+
+#top_recettes_border
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.top_recettes_border
+{
+    border: 2px solid rgb(0, 0, 0);
+    box-shadow: 1px 1px 2px rgb(95, 94, 94);
+    /*margin: 30px 40px 30px 40px;*/
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 400px;
+    background: white;
+}
+
+.top_recettes_border h1
+{
+    text-align: center;
+}
+
+.top_recettes_border p
+{
+    text-indent: 10px;
+    text-align: justify;
+}
+
+.top_recettes_border em
+{
+    text-align: right;
+    text-indent: 10px;
+}
+
+/*@media all and(max-width: 1000px)
+{
+    .top_recettes_border
+    {
+        height:50%;
+        width:50%;
+    }
+}
+*/
+
+@media all and (max-width: 1300px)
+{
+    .top_recettes_border
+    {
+        height:275px;
+        width:350px;
+    }
+}
+
+@media all and (max-width: 1100px)
+{
+    #top_recettes_border
+        {
+             display: flex;
+             flex-direction: column;
+             align-items: center;
+        }
+
+    .top_recettes_border
+        {
+            align-items: center;
+        }
+
+}
