--- a/css/header.css
+++ b/css/header.css
@@ -27,7 +27,7 @@
 {
     font-size: 2.5em;
     font-weight: normal;
-    margin: 0 0 0 10px;
+    margin: 0 35px 0 10px;
     font-weight: bold;
     font-style: normal;
 }
@@ -48,13 +48,13 @@
 #header_menu li
 {
     margin-right: 10px;
+    font-size: 1.2em;
+    padding-bottom: 0px;
 }
 
 #header_menu a
 {
-    font-size: 1.2em;
     color: #181818;
-    padding-bottom: 0px;
     text-decoration: none;
 }
 
@@ -64,15 +64,27 @@
     border-bottom: 3px solid rgb(255,123,172);
 }
 
+#header_search_div
+{
+    display: flex;
+    flex: 1;
+}
+
+#header_search_div form
+{
+    display: flex;
+    flex: 1;
+}
+
 #header_searchbar
 {
     display: flex;
     justify-content: center;
     border-radius: 10px;
     border: 1px solid black;
-    width: 300px;
-    height: 30px;
+    height: 35px;
     text-indent: 10px;
+    flex: 1;
 }
 
 #header_searchbar:focus-within
@@ -92,5 +104,10 @@
     #header_logo
     {
         flex-direction: column;
+    }
+
+    #header_menu_separator
+    {
+        display: none;
     }
 }
