--- a/css/recette_create.css
+++ b/css/recette_create.css
@@ -33,7 +33,8 @@
 #create_recette_final_buttom
 {
     border-top: 1px dashed black;
-    padding-top: 5px;
+    padding-top: 10px;
+    padding-bottom: 2px;
     margin-top: 15px;
     text-align: center;
 }
