--- a/css/recette.css
+++ b/css/recette.css
@@ -15,25 +15,59 @@
     padding: 30px 60px 30px 60px;
 }
 
+#recette_public input
+{
+    width: 40px;
+    height: auto;
+}
+
 /* allignement de tout sauf note et like*/
 
-#recette_title, #recette_desc,#recette_img, #recette_ingrediants, #recette_etapes {
+#recette_desc,#recette_img, #recette_ingrediants, #recette_etapes,#recette_public {
     margin: auto;
 }
 
 
 /* Partie titre et description */
 
-#recette_title{
+#recette_title
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:center;
+}
+
+#recette_title h1
+{
     text-shadow: 1px 1px 1px black;
-    margin: auto;
     border-bottom: 2px solid grey;
-    padding-left: 10px;
     padding-right:10px;
 }
 
-#recette-desc{
+#recette_title input
+{
+    width: 30px;
+    height: auto;
+}
+
+#recette_desc
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#recette_desc h3
+{
     font-weight: bold;
+    padding-right:10px;
+}
+
+#recette_desc input
+{
+    width: 30px;
+    height: auto;
 }
 
 /*Partie note et like */
@@ -89,12 +123,62 @@
     height: auto;
 }
 
+/* Informations supplémentaires */
+
+#recette_more_informations
+{
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    justify-content:space-around;
+    border: 1px solid rgb(218, 116, 1);
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#recette_more_informations p
+{
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+}
+
+#recette_info_container
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: auto;
+}
+
+#recette_info_container input
+{
+    width: 30px;
+    height: auto;
+    margin-left: 5px;
+}
 /*Partie image */
 
 
 #recette_img img{
     width: 300px;
     height: auto;
+}
+
+#recette_img_container
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: auto;
+}
+
+#recette_img_container input
+{
+    width: 30px;
+    height: auto;
+    margin-left: 5px;
 }
 
 
@@ -115,6 +199,9 @@ sans centrer donc j'ai cherché pour rien*/
     border-radius: 10px;
     margin-top: 30px;
     margin-bottom: 30px;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: justify;
 }
 
 #recette_ingrediants
@@ -125,6 +212,56 @@ sans centrer donc j'ai cherché pour rien*/
 #recette_ingrediants h2, #recette_etapes h2{
     margin-bottom: 20px;
     text-align: center;
+}
+
+.recette_add
+{
+    text-align: right;
+}
+
+.recette_add input
+{
+    width: 25px;
+    height: auto;
+    margin-bottom: 5px;
+}
+
+.recette_ingredient_etape_container
+{
+    display: flex;
+    flex-direction:row;
+}
+
+.recette_ingredient_etape_container em
+{
+    font-weight: bold;
+}
+
+.recette_ingredient_etape_container_num
+{
+    width: 40px;
+    text-align: center;
+}
+
+.recette_ingredient_etape_container_desc
+{
+    flex:1;
+}
+
+.recette_ingredient_etape_container_buttom
+{
+    width: 70px;
+    display: flex;
+    flex-direction:row;
+    margin-left: 30px;
+    align-items: center;
+}
+
+.recette_ingredient_etape_container input
+{
+    width: 25px;
+    height: 25px;
+    margin: auto;
 }
 
 /*Espace commentaire, Bon pour le moment je l'intègre à la page mais il est
