--- a/css/accueil.css
+++ b/css/accueil.css
@@ -77,6 +77,7 @@ En responsive format petit/mobile ou alors utiliser wrap il faudra mettre les re
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 30px;
 }
 
 .top_recettes_border
@@ -86,19 +87,26 @@ En responsive format petit/mobile ou alors utiliser wrap il faudra mettre les re
     /*margin: 30px 40px 30px 40px;*/
     padding-left: 5px;
     padding-right: 5px;
-    margin-top: 30px;
-    margin-bottom: 30px;
     display: flex;
     flex-direction: column;
     height: 300px;
     width: 400px;
     background: white;
     border-radius: 10px;
+    justify-content: space-between;
 }
 
 .top_recettes_border h1
 {
     text-align: center;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+#top_recettes_border a
+{
+    text-decoration: none;
+    color: black;
 }
 
 .top_recettes_border p
@@ -107,10 +115,27 @@ En responsive format petit/mobile ou alors utiliser wrap il faudra mettre les re
     text-align: justify;
 }
 
+#accueil_top_recette_container
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 5px;
+}
+
 .top_recettes_border em
 {
     text-align: right;
-    text-indent: 10px;
+    padding-right: 10px;
+    margin-left: auto;
+
+}
+
+.top_recettes_border strong
+{
+    text-align: left;
+    padding-left: 10px;
+    font-weight: bold;
 }
 
 @media all and (max-width: 1300px)
@@ -128,7 +153,15 @@ En responsive format petit/mobile ou alors utiliser wrap il faudra mettre les re
         }
 }
 
-@media all and (max-width: 1100px)
+@media all and (min-width: 1200px)
+{
+    #top_recettes_separator
+    {
+        display: none;
+    }
+}
+
+@media all and (max-width: 1200px)
 {
     #top_recettes_border
         {
