--- a/css/recette.css
+++ b/css/recette.css
@@ -42,7 +42,7 @@
 {
     text-shadow: 1px 1px 1px black;
     border-bottom: 2px solid grey;
-    padding-right:10px;
+    margin-right:10px;
 }
 
 #recette_title input
