--- a/css/recettes.css
+++ b/css/recettes.css
@@ -1,9 +1,14 @@
+.main_div
+{
+    background:rgb(207, 207, 205);
+}
+
+
 #recettes_main
 {
     display:flex;
     flex-direction: column;
     justify-content: space-around;
-    background-image: url("img/fond.png");
     margin-left: 40px;
     margin-right: 40px;
 }
@@ -30,6 +35,8 @@
 {
     text-align: right;
     font-weight: bold;
+    font-size: large;
+    margin-bottom: 10px;
 }
 
 .recettes_container
@@ -55,7 +62,7 @@
     display: flex;
 }
 
-.recettes_note
+.recettes_note_auteur
 {
     border-left: 3px solid rgb(63, 62, 62);
     box-shadow: 1px 1px 1px grey;
@@ -63,6 +70,13 @@
     text-align: center;
     padding: 5px;
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.recettes_note_auteur strong
+{
+    font-weight: bold;
 }
 
 .recettes_desc
