--- a/css/recette.css
+++ b/css/recette.css
@@ -19,6 +19,14 @@
 {
     width: 40px;
     height: auto;
+    margin-left: 7px;
+}
+
+.del_buttom input
+{
+    width: 25px !important;
+    height: auto;
+    margin-right: 2px;
 }
 
 /* allignement de tout sauf note et like*/
@@ -51,6 +59,7 @@
     width: 30px;
     height: auto;
 }
+
 
 #recette_desc
 {
